src/objects/MBMS_Movie_News__c.object
<CustomObject>
    <description>This is an object for storing information about the Movie News.</description>
    <fields>
        <fullName>MBMS_Content__c</fullName>
        <description>A field that stores the news content.</description>
        <inlineHelpText>News content.</inlineHelpText>
        <label>Content</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MBMS_Movie__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A field that stores a lookup to the Movie object.</description>
        <inlineHelpText>Movie.</inlineHelpText>
        <label>Movie</label>
        <referenceTo>MBMS_Movie__c</referenceTo>
        <relationshipLabel>Movie News</relationshipLabel>
        <relationshipName>Movie_News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBMS_Tags__c</fullName>
        <description>A field that stores comma separated news tags.</description>
        <inlineHelpText>News tags.</inlineHelpText>
        <label>Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MBMS_Title__c</fullName>
        <description>A field that stores the news title.</description>
        <inlineHelpText>News title.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Movie News</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Movie News Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movie News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>